# orchestrator

./: .gitignore  README.md  SPEC.md  TASK-04-18-bwrap-transcript.md  pyproject.toml
lean/: README.md  __init__.py  agent.py  cli.py  config.py  dependency.py  indexer.py  logger.py  orchestrator.py  rollback.py  sandbox.py  self_test.py  tasks.py  test_task01_dispatch.py  test_task04_sandbox.py  test_task12_verify.py  test_task13_cache.py  vault.py  verification.py  worker.py
