[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-orchestrator"
version = "3.1.0"
description = "AI-powered task orchestration with multi-agent architecture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OpenHands", email = "openhands@all-hands.dev"}
]
keywords = ["ai", "agent", "orchestration", "task-queue", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "docker>=7.0.0",
    "tkinter-tooltip>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
vault-orchestrator = "vault_orchestrator.ui.app:main"

[project.urls]
Homepage = "https://github.com/openhands/vault-orchestrator"
Repository = "https://github.com/openhands/vault-orchestrator"

[tool.setuptools.packages.find]
where = ["."]
include = ["vault_orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["vault_orchestrator/tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
